--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # Site settings
-title: Clean Blog
+title: Tempat Wisata Terbaik
 header-img: img/home-bg.jpg
-email: your-email@yourdomain.com
+email: cahbetik@yahoo.com
 copyright_name: Your/Project/Corporate Name
-description: "Write your site description here. It will be used as your sites meta description as well!"
+description: "Beragam tempat wisata terbaik di dunia"
 baseurl: "/startbootstrap-clean-blog-jekyll"
-url: "http://yourdomain.com"
+url: "http://adiba.github.io/"
 twitter_username: SBootstrap
 github_username:  davidtmiller
 facebook_username:  IronSummitMedia
-email_username:  your-email@yourdomain.com
+email_username:  cahbetik@yahoo.com
 
 # Google Analytics
 # To enable google analytics, uncomment below line with a valid Google Tracking ID
